--- a/frontend/src/screens/Home.css
+++ b/frontend/src/screens/Home.css
@@ -6,11 +6,8 @@
 
 body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  background-color: #fff;
+  background: linear-gradient(220.55deg, #24cfc5 0%, #001c63 100%);
   color: #333;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   height: 100vh;
 }
 
@@ -18,10 +15,19 @@ body {
   width: 100%;
   max-width: 600px;
   margin: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.cardWrapper {
+  border-radius: 8px;
   padding: 12px;
+  width: 100%;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   background: white;
-  border-radius: 8px;
 }
 
 .form {
@@ -75,7 +81,7 @@ body {
 }
 
 .select.selectUser {
-  width: 50%;
+  width: 40%;
 }
 
 .input {
@@ -95,17 +101,6 @@ label {
 .loader {
   margin: 24px 0;
 }
-
-.title {
-  text-align: center;
-  margin-bottom: 24px;
-  font-size: 24px;
-  color: rgb(0, 102, 255);
-  background-color: rgb(229, 240, 255);
-  border-radius: 8px;
-  padding: 12px 18px;
-}
-
 .spinner {
   border: 4px solid rgba(0, 0, 0, 0.1);
   width: 36px;
